<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    
    android:orientation="horizontal"
    android:padding="5dip" >
    <!-- ListRow Left side Thumbnail image -->

    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/tvTitle"
        android:padding="8dip" >

        <ImageView
            android:id="@+id/bikeimage"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="0.53"
            android:contentDescription="@string/app_name"
            android:src="@drawable/bikeicon" />
    </LinearLayout>

    <!-- Rightend Arrow -->
    <!-- City-->

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/thumbnail"
        android:paddingBottom="2dip"
        android:text="@string/title"
        android:textColor="#040404"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <!-- Weather Information-->

    <TextView
        android:id="@+id/tvDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTitle"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvTitle"
        android:paddingTop="5sp"
        android:text="@string/description"
        android:textColor="#343434"
        android:textSize="16sp" />

</RelativeLayout>  